# mapoi

./: .dockerignore  .env.example  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  MAPOI_IMPLEMENTATION_PLAN.md  README.ja.md  README.md  changelog-0.6.0-draft.rst  docker-compose.dri.yml  docker-compose.gpu.yml  docker-compose.yml
mapoi/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
mapoi_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.ja.md  README.md  package.xml
mapoi_interfaces/action/: FollowPoiList.action  MultiNavigateToPoses.action
mapoi_interfaces/msg/: InitialPoseRequest.msg  LocalizationBackendStatus.msg  NavigationBackendStatus.msg  PoiEvent.msg  PointOfInterest.msg  TagDefinition.msg  Tolerance.msg
mapoi_interfaces/srv/: GetMapInfo.srv  GetMapsInfo.srv  GetPoisInfo.srv  GetRoutePois.srv  GetRoutesInfo.srv  GetTagDefinitions.srv  GetTaggedPois.srv  RequestInitialPose.srv  SelectMap.srv  SwitchMap.srv
mapoi_rviz_plugins/: CHANGELOG.rst  CMakeLists.txt  README.ja.md  README.md  package.xml  plugin_description.xml
mapoi_rviz_plugins/include/mapoi_rviz_plugins/: config_path_update_policy.hpp  mapoi_panel.hpp  mapoi_panel_helpers.hpp  mapoi_pose_tool.hpp  poi_editor.hpp  poi_editor_helpers.hpp  poi_tool.hpp
mapoi_rviz_plugins/src/: mapoi_panel.cpp  mapoi_panel_backend_status.cpp  mapoi_panel_config.cpp  mapoi_panel_nav_control.cpp  mapoi_panel_nav_status.cpp  mapoi_pose_tool.cpp  poi_editor.cpp  poi_editor_display_settings.cpp  poi_editor_save.cpp  poi_editor_table.cpp  poi_editor_tags.cpp  poi_editor_validation.cpp  poi_tool.cpp
mapoi_rviz_plugins/src/ui/: mapoi_panel.ui  poi_editor.ui
mapoi_rviz_plugins/test/: test_config_path_update_policy.cpp  test_mapoi_panel_helpers.cpp  test_poi_editor_helpers.cpp  test_poi_editor_validation.cpp
mapoi_server/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.ja.md  README.md  package.xml
mapoi_server/include/mapoi_server/: initial_pose_resolver.hpp  map_state_store.hpp  mapoi_amcl_localization_bridge.hpp  mapoi_gazebo_bridge.hpp  mapoi_gz_bridge.hpp  mapoi_nav2_bridge.hpp  mapoi_nav_server.hpp  mapoi_poi_server.hpp  mapoi_rviz2_publisher.hpp  mapoi_server.hpp  system_tags.hpp
mapoi_server/launch/: mapoi_bringup.launch.yaml  mapoi_core.launch.yaml  mapoi_gazebo_bridge.launch.yaml  turtlebot3_navigation_launch.yaml
mapoi_server/maps/: tag_definitions.yaml
mapoi_server/maps/giken2F_real_demo/: giken2F_real_demo.yaml  giken2F_real_localization.pgm  giken2F_real_localization.yaml  giken2F_real_pathplanning.pgm  giken2F_real_pathplanning.xcf  giken2F_real_pathplanning.yaml
mapoi_server/maps/turtlebot3_dqn_stage1/: mapoi_config.yaml  turtlebot3.pgm
mapoi_server/maps/turtlebot3_world/: localization.yaml  mapoi_config.yaml
mapoi_server/src/: initial_pose_resolver.cpp  map_state_store.cpp  mapoi_amcl_localization_bridge.cpp  mapoi_gazebo_bridge.cpp  mapoi_gz_bridge.cpp  mapoi_map_server.cpp  mapoi_nav2_bridge.cpp  mapoi_nav2_bridge_backend_status.cpp  mapoi_nav2_bridge_goal.cpp  mapoi_nav2_bridge_map_switch.cpp  mapoi_nav2_bridge_route.cpp  mapoi_nav_server.cpp  mapoi_poi_server.cpp  mapoi_rviz2_publisher.cpp  mapoi_server.cpp
mapoi_server/test/: nav2_mocks.py  test_backend_status_liveliness.py  test_backend_status_no_nav2.py  test_initial_pose_resolver.cpp  test_localization_backend_status_no_amcl.py  test_map_state_store.cpp  test_mapoi_config.yaml  test_mapoi_server_unit.cpp  test_multiwriter_initialpose_no_stale.py  test_nav2_bridge_unit.cpp  test_nav_server_unit.cpp  test_nav_status_rejected_during_navigation.py  test_nav_status_rejected_paths.py  test_nav_status_route_backend_failure.py  test_nav_status_service_unavailable.py  test_poi_event_goal_mapoi_arrival.py  test_poi_event_integration.py  test_poi_event_route_integration.py  test_poi_event_route_mapoi_arrival.py  test_reload_clears_initialpose.py  test_select_map_no_nav2.py  test_select_map_validation.py  test_server_restart_initialpose_relatch.py  test_switch_map_loadmap_initialpose.py  test_system_tags_contract.cpp
mapoi_turtlebot3_example/: CHANGELOG.rst  CMakeLists.txt  README.ja.md  README.md  package.xml
mapoi_turtlebot3_example/config/: sim_bridge.yaml
mapoi_turtlebot3_example/gazebo_models/: README.md
mapoi_turtlebot3_example/include/mapoi_turtlebot3_example/: camera_node.hpp  follow_waypoints_client.hpp  navigate_to_pose_client.hpp  poi_event_utils.hpp
mapoi_turtlebot3_example/launch/: gazebo_headless_aware.launch.py  gazebo_headless_aware.launch.yaml  gz_sim_headless_aware.launch.yaml  mapoi_event_samples.launch.yaml  turtlebot3_navigation.launch.yaml  turtlebot3_navigation_launch.yaml
mapoi_turtlebot3_example/mapoi_turtlebot3_example/: sim_bridge.py
mapoi_turtlebot3_example/maps/turtlebot3_dqn_stage1/: mapoi_config.yaml  turtlebot3.yaml  (+1 more)
mapoi_turtlebot3_example/param/: burger.yaml
mapoi_turtlebot3_example/rviz/: tb3_navigation2.rviz
mapoi_turtlebot3_example/src/: audio_guide_node.cpp  camera_node.cpp  follow_waypoints_client.cpp  get_map_info_client.cpp  get_maps_info_client.cpp  get_poi_info_client.cpp  get_pois_info_client.cpp  mapoi_switch_map_client.cpp  navigate_to_pose_client.cpp  print_initialpose.cpp  switch_map_client.cpp
mapoi_turtlebot3_example/test/: test_camera_node.cpp  test_demo_config_integrity.py
mapoi_web/: CMakeLists.txt  TODO.md  package.xml  setup.cfg
mapoi_web/launch/: mapoi_web_launch.yaml
mapoi_web/mapoi_web/: map_image.py  mapoi_web_node.py  yaml_handler.py
mapoi_web/web/: index.html
mapoi_webui/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.ja.md  README.md  package.xml  setup.cfg
mapoi_webui/launch/: mapoi_editor.launch.yaml  mapoi_webui.launch.yaml  mapoi_webui_launch.yaml
mapoi_webui/mapoi_webui/: mapoi_webui_node.py  yaml_handler.py
mapoi_webui/test/: test_api_nav_endpoints.py  test_api_save_pois_version_conflict.py  test_api_select_map.py  test_api_sse_config_events.py  test_get_navigation_capabilities.py  test_resolve_backend_status_for_ui.py  test_yaml_handler_round.py  test_yaml_handler_version.py
mapoi_webui/web/: index.html
(+101 files in other folders)
