<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapoi</name>
  <version>0.4.0</version>
  <description>Metapackage for mapoi: map and POI management for Navigation2</description>
  <maintainer email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/shimz-robotics/mapoi</url>
  <url type="bugtracker">https://github.com/shimz-robotics/mapoi/issues</url>
  <author email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mapoi_server</exec_depend>
  <exec_depend>mapoi_interfaces</exec_depend>
  <exec_depend>mapoi_rviz_plugins</exec_depend>
  <exec_depend>mapoi_webui</exec_depend>
  <exec_depend>mapoi_turtlebot3_example</exec_depend>

  <!-- NOTE: <metapackage/> export (REP 140) は付けない。catkin_pkg の検証が
       ROS 1 前提で「buildtool_depend on catkin が必須」と warning を出すため、
       navigation2 等の ROS 2 metapackage と同じく exec_depend のみの
       plain package として定義する (#348)。 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
