<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapoi_rviz_plugins</name>
  <version>0.3.0</version>
  <description>Rviz2 plugins for mapoi</description>
  <maintainer email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/shimz-robotics/mapoi</url>
  <url type="bugtracker">https://github.com/shimz-robotics/mapoi/issues</url>
  <author email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</author>

  <depend>ament_cmake_auto</depend>
  <depend>std_srvs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>mapoi_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
