<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapoi_server</name>
  <version>0.3.0</version>
  <description>map and poi server</description>
  <maintainer email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/shimz-robotics/mapoi</url>
  <url type="bugtracker">https://github.com/shimz-robotics/mapoi/issues</url>
  <author email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_auto</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp_action</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mapoi_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Humble (Gazebo Classic) で mapoi_gazebo_bridge を build/run するための依存。
       Jazzy 以降では gazebo_msgs が存在しないため、CMakeLists 側で
       find_package(gazebo_msgs QUIET) を使い build 時に skip する。-->
  <depend condition="$ROS_DISTRO == 'humble'">gazebo_msgs</depend>

  <!-- Jazzy 以降 (gz-sim) で mapoi_gz_bridge を build/run するための依存。
       Humble では ros_gz_interfaces が存在しないため、CMakeLists 側で
       find_package(ros_gz_interfaces QUIET) を使い build 時に skip する。
       ros_gz_bridge は launch から parameter_bridge を起動するために exec_depend。-->
  <depend condition="$ROS_DISTRO != 'humble'">ros_gz_interfaces</depend>
  <exec_depend condition="$ROS_DISTRO != 'humble'">ros_gz_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
