<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapoi_turtlebot3_example</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kimushun1101@gmail.com">kimura</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_auto</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlebot3</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>mapoi_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
