<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapoi_turtlebot3_example</name>
  <version>0.2.0</version>
  <description>TurtleBot3 simulation example for mapoi with sample maps and client nodes</description>
  <maintainer email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/shimz-robotics/mapoi</url>
  <url type="bugtracker">https://github.com/shimz-robotics/mapoi/issues</url>
  <author email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_auto</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>turtlebot3</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <!-- gz_sim_headless_aware.launch.yaml が ros_gz_sim/launch/gz_sim.launch.py を直接 include するため、
       Jazzy 以降では明示的に exec_depend を持たせる。Humble (Gazebo Classic) では不要 -->
  <exec_depend condition="$ROS_DISTRO != 'humble'">ros_gz_sim</exec_depend>
  <exec_depend>mapoi_server</exec_depend>
  <exec_depend>mapoi_webui</exec_depend>
  <exec_depend>mapoi_rviz_plugins</exec_depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>mapoi_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
